--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,10 @@
     />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script
+      async
+      src="https://cse.google.com/cse.js?cx=ce5974f4ca9842e6f"
+    ></script>
 
     <title>First React App</title>
   </head>
